--- a/src/templates/_card.html
+++ b/src/templates/_card.html
@@ -13,6 +13,7 @@
 					</div>
 					<div class="card__slider tab__block swiper" data-badge="new" data-discount="-20%">
 						<div class="swiper-wrapper">
+							<div class="card__slide swiper-slide"><img src="./images/card-image-5.webp" alt=""></div>
 							<div class="card__slide swiper-slide"><img src="./images/card-image-3.webp" alt=""></div>
 							<div class="card__slide swiper-slide"><img src="./images/card-image-2.webp" alt=""></div>
 							<div class="card__slide swiper-slide"><img src="./images/card-image-1.webp" alt=""></div>
@@ -21,9 +22,9 @@
 						<a class="card__link" href="./detail.html">Смотреть весь образ</a>
 					</div>
 				</div>
-				<div class="card__toggles tab__buttons">
-					<button class="card__toggle tab__button active"></button>
-					<button class="card__toggle tab__button"></button>
+				<div class="card__toggles tab__buttons toggle">
+					<button class="toggle__button tab__button active"></button>
+					<button class="toggle__button tab__button"></button>
 				</div>
 			</div>
 			<div class="card__bottom">
