--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,10 +8,10 @@
 }
 
 // Include breakpoints badge
-// body { @include screen-media(); }
+body { @include screen-media(); }
 
 // Import media-query helper
-@import "../../node_modules/include-media/dist/_include-media.scss";
+@import "../../node_modules/include-media/dist/_include-media";
 
 $breakpoints: (
 	'xxxs': 360px,
@@ -43,6 +43,8 @@ $breakpoints: (
 @include font-face("Circe-Thin", "CR", 100);
 
 @import "../../node_modules/swiper/swiper";
+@import "../../node_modules/lightgallery/scss/lightgallery";
+@import "../../node_modules/lightgallery/scss/lg-zoom";
 
 // Import BEM blocks scss
 @import "../blocks/**/*.scss";
