--- a/src/templates/_bottom.html
+++ b/src/templates/_bottom.html
@@ -26,7 +26,7 @@
 				<a class="f-navi__link" href="./">Публичная оферта</a>
 				<a class="f-navi__link" href="./">Возврат</a>
 			</div>
-			<h2 class="f-navi__title">Информация</h2>
+			<h2 class="f-navi__title">Клиентам</h2>
 			<div class="f-navi__links">
 				<a class="f-navi__link" href="./">Таблица размеров</a>
 				<a class="f-navi__link" href="./">Образы</a>
@@ -50,8 +50,8 @@
 				<span>Звонок бесплатный</span>
 			</a>
 			<div class="f-navi__links">
-				<span class="f-navi__link">доб. 1220, 1221, 1230, 1234.</span>
-				<span class="f-navi__link">ПН–ПТ: 09:00–17:30 (по мск)</span>
+				<span class="f-navi__link">Добавочный номер 1220, 1221, 1230, 1234.</span>
+				<span class="f-navi__link">Понедельник - Пятница: 09:00–17:30 (по мск)</span>
 				<a class="f-navi__link" href="mailto:sales@volnui.ru">sales@volnui.ru</a>
 			</div>
 		</div>
