--- a/src/blocks/d-sizes/d-sizes.scss
+++ b/src/blocks/d-sizes/d-sizes.scss
@@ -27,6 +27,10 @@
 		align-items: center;
 		margin-bottom: 4px;
 		font-size: 12px;
+
+		@include media('<=xxs') {
+			font-size: 10px;
+		}
 	}
 
 	&__title {
@@ -38,6 +42,15 @@
 		align-items: center;
 		padding: 0 18px;
 		height: 40px;
+		
+		@include media('<=xxs') {
+			padding: 0 10px;
+			height: 35px;
+		}
+		
+		@include media('<=xxxs') {
+			height: 30px;
+		}
 	}
 
 	&__size {
@@ -45,15 +58,34 @@
 		height: 40px;
 		margin-left: 4px;
 		display: flex;
+		flex-shrink: 0;
 		align-items: center;
 		justify-content: center;
 		background-color: #F8F8F8;
+		
+		@include media('<=xxs') {
+			height: 35px;
+			width: 35px;
+		}
+		
+		@include media('<=xxxs') {
+			height: 30px;
+			width: 30px;
+		}
 	}
 
 	&__control {
 		width: 40px;
 		margin-left: 4px;
 		flex-shrink: 0;
+		
+		@include media('<=xxs') {
+			width: 35px;
+		}
+		
+		@include media('<=xxxs') {
+			width: 30px;
+		}
 		
 		input {
 			@extend %reset-input;
@@ -62,6 +94,14 @@
 			font-size: 12px;
 			height: 40px;
 			width: 100%;
+			
+			@include media('<=xxs') {
+				height: 35px;
+			}
+			
+			@include media('<=xxxs') {
+				height: 30px;
+			}
 		}
 		
 		button {
@@ -70,6 +110,14 @@
 			font-size: 12px;
 			width: 100%;
 			height: 40px;
+			
+			@include media('<=xxs') {
+				height: 35px;
+			}
+			
+			@include media('<=xxxs') {
+				height: 30px;
+			}
 		}
 
 		&_disabled button, &_disabled input {
