--- a/src/blocks/gallery/gallery.scss
+++ b/src/blocks/gallery/gallery.scss
@@ -28,6 +28,10 @@
 		}
 		
 		@include media('<=sm') {
+			grid-gap: 10px;
+		}
+		
+		@include media('<=xs') {
 			display: flex;
 			grid-gap: 0;
 		}
@@ -49,11 +53,31 @@
 		}
 	}
 
-	&__toggles {
-		// display: none;
+	&__dots {
+		box-sizing: border-box;
+		display: flex;
+		position: absolute;
+		z-index: 2;
+		bottom: 5px;
+		left: 10px;
+		right: 10px;
 	}
 
-	&__toggle {
+	&__dot {
+		box-sizing: border-box;
+		height: 3px;
+		margin-right: 2px;
+		background-color: #C2C5C7;
+		opacity: 0.5;
+		flex-grow: 1;
+		transition: opacity 0.5s;
+		
+		&.active {
+			opacity: 1;
+		}
 
+		&:last-child {
+			margin: 0;
+		}
 	}
 }
