--- a/src/blocks/card/card.scss
+++ b/src/blocks/card/card.scss
@@ -30,18 +30,27 @@
 		&::before {
 			content: attr(data-badge);
 			background-color: #3CFFB9;
-			padding: 5px 7px;
+			padding: 5px 7px 4px;
 			font-weight: 700;
 			font-size: 9px;
 			left: 10px;
+			
+			@include media('<=xxs') {
+				padding: 4px 5px 3px;
+			}
 		}
 		
 		&::after {
 			content: attr(data-discount);
 			background-color: #fff;
-			padding: 4px 9px 3px;
+			padding: 3px 9px 2px;
 			font-size: 12px;
 			right: 10px;
+			
+			@include media('<=xxs') {
+				padding: 3px 5px 2px;
+				font-size: 10px;
+			}
 		}
 
 		&:hover {
@@ -82,6 +91,10 @@
 		flex-grow: 1;
 		transition: opacity 0.5s;
 		
+		@include media('<=xxs') {
+			height: 2px;
+		}
+
 		&.active {
 			opacity: 1;
 		}
@@ -115,7 +128,9 @@
 		}
 		
 		@include media('<=xxxs') {
-			font-size: 14px;
+			font-size: 10px;
+			padding: 7px 5px 5px;
+			// font-size: 14px;
 		}
 	}
 
@@ -124,23 +139,39 @@
 		bottom: 20px;
 		left: 10px;
 		z-index: 2;
+		
+		@include media('<=xxxs') {
+			bottom: 15px;
+		}
 	}
 
 	&__bottom {
 		padding-top: 10px;
 		display: flex;
 
-		@include media('<=xxs') {
+		@include media('<=xs') {
 			font-size: 13px;
 		}
 
+		@include media('<=xxs') {
+			font-size: 11px;
+		}
+
 		@include media('<=xxxs') {
-			font-size: 16px;
+			flex-wrap: wrap;
+			justify-content: space-between;
+			// font-size: 16px;
 		}
 	}
 
 	&__title {
 		margin-right: auto;
+
+		@include media('<=xxxs') {
+			width: 100%;
+			order: 1;
+			// margin-bottom: 5px;
+		}
 	}
 
 	&__irrelevant {
@@ -154,7 +185,7 @@
 		}
 		
 		@include media('<=xxxs') {
-			margin-right: 20px;
+			// margin-right: 20px;
 		}
 	}
 	
