--- a/src/blocks/feed/feed.scss
+++ b/src/blocks/feed/feed.scss
@@ -1,6 +1,7 @@
 .feed {
 	$self: &;
 	margin-bottom: 80px;
+	background-color: #fff;
 	
 	@include media('<=md') {
 		margin-bottom: 60px;
@@ -49,11 +50,15 @@
 		}
 		
 		@include media('<=xs') {
-			grid-gap: 50px 10px;
+			grid-gap: 30px 10px;
+		}
+		
+		@include media('<=xxs') {
+			grid-gap: 20px 5px;
 		}
 		
 		@include media('<=xxxs') {
-			grid-template-columns: 1fr;
+			// grid-template-columns: 1fr;
 		}
 	}
 
@@ -74,7 +79,7 @@
 		}
 		
 		@include media('<=xxxs') {
-			grid-column: span 1;
+			// grid-column: span 1;
 		}
 
 		&_1 {
@@ -168,7 +173,7 @@
 		
 			@include media('<=xxxs') {
 				@include aspect-ratio(3, 2);
-				grid-column: span 1;
+				// grid-column: span 1;
 			}
 		
 			video {
