--- a/src/blocks/gallery/gallery.scss
+++ b/src/blocks/gallery/gallery.scss
@@ -55,12 +55,16 @@
 
 	&__dots {
 		box-sizing: border-box;
-		display: flex;
 		position: absolute;
 		z-index: 2;
 		bottom: 5px;
 		left: 10px;
 		right: 10px;
+		display: none;
+		
+		@include media('<=xs') {
+			display: flex;
+		}
 	}
 
 	&__dot {
