--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,7 +8,7 @@
 }
 
 // Include breakpoints badge
-// body { @include screen-media(); }
+body { @include screen-media(); }
 
 // Import media-query helper
 @import "../../node_modules/include-media/dist/_include-media";
@@ -56,6 +56,14 @@ $breakpoints: (
 	
 	@include media('<=xs') {
 		--gap: 16px;
+	}
+	
+	@include media('<=xxs') {
+		--gap: 10px;
+	}
+	
+	@include media('<=xxxs') {
+		--gap: 5px;
 	}
 }
 
