--- a/src/templates/_bottom.html
+++ b/src/templates/_bottom.html
@@ -1,7 +1,7 @@
 <footer class="footer"> 
 	<div class="footer__top f-navi container">
 		<div class="f-navi__col">
-			<h2 class="f-navi__title">Мы в соц. сетях</h2>
+			<h2 class="f-navi__title">Мы в социальных сетях</h2>
 			<div class="f-navi__soc social">
 				<a class="social__link" href="./">
 					<svg><use xlink:href="#icon-soc-vk"></use></svg>
@@ -13,35 +13,41 @@
 					<svg><use xlink:href="#icon-soc-in"></use></svg>
 				</a>
 			</div>
-			<a class="f-navi__title" href="./">Каталог</a>
-			<a class="f-navi__title" href="./">Как сделать заказ</a>
-			<a class="f-navi__title" href="./">Магазины</a>
+			<a class="f-navi__title f-navi__title_link" href="./">Каталог</a>
+			<a class="f-navi__title f-navi__title_link" href="./">Как сделать заказ</a>
+			<a class="f-navi__title f-navi__title_link" href="./">Магазины</a>
 		</div>
 		<div class="f-navi__col">
-			<h2 class="f-navi__title">Информация</h2>
-			<div class="f-navi__links">
-				<a class="f-navi__link" href="./">Доставка</a>
-				<a class="f-navi__link" href="./">Оплата</a>
-				<a class="f-navi__link" href="./">Политика конфиденциальности</a>
-				<a class="f-navi__link" href="./">Публичная оферта</a>
-				<a class="f-navi__link" href="./">Возврат</a>
+			<div class="f-navi__block">
+				<h2 class="f-navi__title">Клиентам</h2>
+				<div class="f-navi__links">
+					<a href="./">Доставка</a>
+					<a href="./">Оплата</a>
+					<a href="./">Политика конфиденциальности</a>
+					<a href="./">Публичная оферта</a>
+					<a href="./">Возврат</a>
+				</div>
 			</div>
-			<h2 class="f-navi__title">Клиентам</h2>
-			<div class="f-navi__links">
-				<a class="f-navi__link" href="./">Таблица размеров</a>
-				<a class="f-navi__link" href="./">Образы</a>
-				<a class="f-navi__link" href="./">Вопрос-ответ</a>
+			<div class="f-navi__block">
+				<h2 class="f-navi__title">Информация</h2>
+				<div class="f-navi__links">
+					<a href="./">Таблица размеров</a>
+					<a href="./">Образы</a>
+					<a href="./">Вопрос-ответ</a>
+				</div>
 			</div>
 		</div>
 		<div class="f-navi__col">
-			<h2 class="f-navi__title">О компании</h2>
-			<div class="f-navi__links">
-				<a class="f-navi__link" href="./">Сотрудничество</a>
-				<a class="f-navi__link" href="./">История бренда</a>
-				<a class="f-navi__link" href="./">Производство</a>
-				<a class="f-navi__link" href="./">Новости</a>
-				<a class="f-navi__link" href="./">Вакансии</a>
-				<a class="f-navi__link" href="./">Контакты</a>
+			<div class="f-navi__block">
+				<h2 class="f-navi__title">О компании</h2>
+				<div class="f-navi__links">
+					<a href="./">Сотрудничество</a>
+					<a href="./">История бренда</a>
+					<a href="./">Производство</a>
+					<a href="./">Новости</a>
+					<a href="./">Вакансии</a>
+					<a href="./">Контакты</a>
+				</div>
 			</div>
 		</div>
 		<div class="f-navi__col">
@@ -49,10 +55,10 @@
 				<span>8 (495) 541 07 07</span>
 				<span>Звонок бесплатный</span>
 			</a>
-			<div class="f-navi__links">
-				<span class="f-navi__link">Добавочный номер 1220, 1221, 1230, 1234.</span>
-				<span class="f-navi__link">Понедельник - Пятница: 09:00–17:30 (по мск)</span>
-				<a class="f-navi__link" href="mailto:sales@volnui.ru">sales@volnui.ru</a>
+			<div class="f-navi__info">
+				<span >Добавочный номер 1220, 1221, 1230, 1234.</span>
+				<span >Понедельник - Пятница: 09:00–17:30 (по мск)</span>
+				<a href="mailto:sales@volnui.ru">sales@volnui.ru</a>
 			</div>
 		</div>
 	</div>
