--- a/src/blocks/navi/navi.scss
+++ b/src/blocks/navi/navi.scss
@@ -2,8 +2,13 @@
 	$self: &;
 	box-sizing: border-box;
 	background-color: #fff;
-	padding: 90px 30px 20px;
+	padding: 100px 30px 20px 60px;
 	font-family: "IN", sans-serif;
+	// border-right: 1px solid #f2f2f2;
+	
+	@include media('<=xxxlg') {
+		padding: 100px 30px 20px;
+	}
 
 	&__content {
 		display: flex;
@@ -84,6 +89,14 @@
 				text-decoration: underline;
 			}			
 		}
+
+		&_mobile {
+			display: none;
+
+			@include media('<=md') {
+				display: block;
+			}
+		}
 	}
 
 	&__links {
@@ -113,6 +126,10 @@
 		width: fit-content;
 		margin: auto 0 5px;
 
+		@include media('<=xs') {
+			display: none;
+		}
+
 		span {
 			display: block;
 
@@ -131,6 +148,17 @@
 				color: #B1B1B1;
 				text-align: right;
 			}
+		}
+	}
+
+	&__panel {
+		margin-top: auto;
+		display: none;
+		align-items: center;
+		justify-content: space-around;
+		
+		@include media('<=xs') {
+			display: flex;
 		}
 	}
 }
