--- a/src/templates/_header.html
+++ b/src/templates/_header.html
@@ -1,4 +1,4 @@
-<header class="header @@if(this.mod){header_@@mod}">
+<header class="header @@if(this.mod){header_@@mod}" @@if(! this.mod){data-scroll-lock-fill-gap}>
 	<div class="header__inner container">
 		<button class="header__toggle">
 			<svg><use xlink:href="#icon-menu"></use></svg>
@@ -8,9 +8,9 @@
 		</a>
 		<div class="header__menu">
 			<a class="header__link" href="./" data-hint="top">новинки</a>
-			<a class="header__link" href="./">для неё</a>
-			<a class="header__link" href="./">для него</a>
-			<a class="header__link" href="./">unisex</a>
+			<a class="header__link" href="./category.html">для неё</a>
+			<a class="header__link" href="./category.html">для него</a>
+			<a class="header__link" href="./category.html">unisex</a>
 			<a class="header__link" href="./">о нас</a>
 			<a class="header__link" href="./">сотрудничество</a>
 			<a class="header__link" href="./">контакты</a>
@@ -18,10 +18,10 @@
 		<a class="header__button header__button_card" href="./" data-cart="2">
 			<svg><use xlink:href="#icon-cart"></use></svg>
 		</a>
-		<button class="header__button header__button_search">
+		<button class="header__button">
 			<svg><use xlink:href="#icon-zoom"></use></svg>
 		</button>
-		<button class="header__button header__button_favorites">
+		<button class="header__button">
 			<svg><use xlink:href="#icon-heart"></use></svg>
 		</button>
 	</div>
@@ -54,6 +54,7 @@
 					<a href="./">Commodi quaerat nulla</a>
 				</div>
 			</div>
+			<a class="navi__title navi__title_link navi__title_mobile" href="./">Новинки</a>
 			<a class="navi__title navi__title_link" href="./">Как сделать заказ</a>
 			<a class="navi__title navi__title_link" href="./">Магазины</a>
 			<div class="navi__block">
@@ -90,6 +91,14 @@
 				<span>8 (495) 541 07 07</span>
 				<span>Звонок бесплатный</span>
 			</a>
+			<div class="navi__panel">
+				<button class="header__button header__button_mobile">
+					<svg><use xlink:href="#icon-zoom"></use></svg>
+				</button>
+				<button class="header__button header__button_mobile">
+					<svg><use xlink:href="#icon-heart"></use></svg>
+				</button>
+			</div>
 		</div>
 	</div>
 </header>
