--- a/src/templates/_card.html
+++ b/src/templates/_card.html
@@ -3,20 +3,36 @@
 				<div class="card__sliders tab__blocks">
 					<div class="card__slider tab__block swiper active" data-badge="new" data-discount="-34%">
 						<div class="swiper-wrapper">
-							<div class="card__slide swiper-slide"><img src="./images/card-image-1.webp" alt=""></div>
-							<div class="card__slide swiper-slide"><img src="./images/card-image-2.webp" alt=""></div>
-							<div class="card__slide swiper-slide"><img src="./images/card-image-3.webp" alt=""></div>
-							<div class="card__slide swiper-slide"><img src="./images/card-image-4.webp" alt=""></div>
+							<div class="card__slide swiper-slide">
+								<img src="./images/card-image-1.webp" loading="lazy" alt="">
+							</div>
+							<div class="card__slide swiper-slide">
+								<img src="./images/card-image-2.webp" loading="lazy" alt="">
+							</div>
+							<div class="card__slide swiper-slide">
+								<img src="./images/card-image-3.webp" loading="lazy" alt="">
+							</div>
+							<div class="card__slide swiper-slide">
+								<img src="./images/card-image-4.webp" loading="lazy" alt="">
+							</div>
 						</div>
 						<div class="card__dots"></div>
 						<a class="card__link" href="./detail.html">Смотреть весь образ</a>
 					</div>
 					<div class="card__slider tab__block swiper" data-badge="new" data-discount="-20%">
 						<div class="swiper-wrapper">
-							<div class="card__slide swiper-slide"><img src="./images/card-image-5.webp" alt=""></div>
-							<div class="card__slide swiper-slide"><img src="./images/card-image-3.webp" alt=""></div>
-							<div class="card__slide swiper-slide"><img src="./images/card-image-2.webp" alt=""></div>
-							<div class="card__slide swiper-slide"><img src="./images/card-image-1.webp" alt=""></div>
+							<div class="card__slide swiper-slide">
+								<img src="./images/card-image-5.webp" loading="lazy" alt="">
+							</div>
+							<div class="card__slide swiper-slide">
+								<img src="./images/card-image-3.webp" loading="lazy" alt="">
+							</div>
+							<div class="card__slide swiper-slide">
+								<img src="./images/card-image-2.webp" loading="lazy" alt="">
+							</div>
+							<div class="card__slide swiper-slide">
+								<img src="./images/card-image-1.webp" loading="lazy" alt="">
+							</div>
 						</div>
 						<div class="card__dots"></div>
 						<a class="card__link" href="./detail.html">Смотреть весь образ</a>
