--- a/src/templates/_header.html
+++ b/src/templates/_header.html
@@ -1,5 +1,5 @@
 <header class="header @@if(this.mod){header_@@mod}" @@if(! this.mod){data-scroll-lock-fill-gap}>
-	<div class="header__inner container">
+	<div class="header__inner">
 		<button class="header__toggle">
 			<svg><use xlink:href="#icon-menu"></use></svg>
 		</button>
@@ -11,8 +11,8 @@
 			<a class="header__link" href="./category.html">для неё</a>
 			<a class="header__link" href="./category.html">для него</a>
 			<a class="header__link" href="./category.html">unisex</a>
-			<a class="header__link" href="./">о нас</a>
-			<a class="header__link" href="./">сотрудничество</a>
+			<a class="header__link" href="./about.html">о нас</a>
+			<a class="header__link" href="./info.html">сотрудничество</a>
 			<a class="header__link" href="./">контакты</a>
 		</div>
 		<a class="header__button header__button_card" href="./" data-cart="2">
