--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -9,7 +9,7 @@
 	left: 0;
 	width: 100%;
 
-	&_home {
+	&_outer {
 		background-color: transparent;
 		height: 120px;
 		margin: 0 0 -120px;
@@ -35,7 +35,11 @@
 		display: flex;
 		align-items: center;
 		height: 100%;
-		max-width: 1780px !important;
+		max-width: 1840px !important;
+		width: calc(100% - 48px);
+		margin-right: auto;
+		margin-left: auto;
+	
 	}
 
 	&__toggle {
