--- a/src/blocks/navi/navi.scss
+++ b/src/blocks/navi/navi.scss
@@ -2,12 +2,19 @@
 	$self: &;
 	box-sizing: border-box;
 	background-color: #fff;
-	padding: 100px 30px 20px 60px;
+	padding: 90px 30px 20px 60px;
 	font-family: "IN", sans-serif;
-	// border-right: 1px solid #f2f2f2;
+
+	@at-root body.outer & {
+		padding-top: 120px;
+	}
 	
 	@include media('<=xxxlg') {
-		padding: 100px 30px 20px;
+		padding: 90px 30px 20px;
+	}
+	
+	@include media('<=xxs') {
+		padding: 90px 20px 20px;
 	}
 
 	&__content {
