--- a/src/templates/_head.html
+++ b/src/templates/_head.html
@@ -7,4 +7,4 @@
 	<link rel="stylesheet" href="style.css"> 
 	<title></title> 
 </head> 
-<body @@if(this.id){id="@@id"}>
+<body @@if(this.class){class="@@class"}>
