--- a/src/templates/_header.html
+++ b/src/templates/_header.html
@@ -30,41 +30,41 @@
 			<div class="navi__block">
 				<h2 class="navi__title">Женщинам</h2>
 				<div class="navi__links">
-					<a href="./">Lorem ipsum dolor</a>
-					<a href="./">Sit amet consectetur</a>
-					<a href="./">Adipisicing elit</a>
-					<a href="./">Fugiat dignissimos</a>
+					<a href="./category.html">Lorem ipsum dolor</a>
+					<a href="./category.html">Sit amet consectetur</a>
+					<a href="./category.html">Adipisicing elit</a>
+					<a href="./category.html">Fugiat dignissimos</a>
 				</div>
 			</div>
 			<div class="navi__block">
 				<h2 class="navi__title">Мужчинам</h2>
 				<div class="navi__links">
-					<a href="./">Iste aspernatur quis</a>
-					<a href="./">Adipisci architecto</a>
-					<a href="./">Numquam exercitationem</a>
-					<a href="./">Reiciendis voluptatibus</a>
+					<a href="./category.html">Iste aspernatur quis</a>
+					<a href="./category.html">Adipisci architecto</a>
+					<a href="./category.html">Numquam exercitationem</a>
+					<a href="./category.html">Reiciendis voluptatibus</a>
 				</div>
 			</div>
 			<div class="navi__block">
 				<h2 class="navi__title">Unisex</h2>
 				<div class="navi__links">
-					<a href="./">Deserunt laborum</a>
-					<a href="./">Asperiores cupiditate</a>
-					<a href="./">Veniam velit atque</a>
-					<a href="./">Commodi quaerat nulla</a>
+					<a href="./category.html">Deserunt laborum</a>
+					<a href="./category.html">Asperiores cupiditate</a>
+					<a href="./category.html">Veniam velit atque</a>
+					<a href="./category.html">Commodi quaerat nulla</a>
 				</div>
 			</div>
-			<a class="navi__title navi__title_link navi__title_mobile" href="./">Новинки</a>
-			<a class="navi__title navi__title_link" href="./">Как сделать заказ</a>
+			<a class="navi__title navi__title_link navi__title_mobile" href="./category.html">Новинки</a>
+			<a class="navi__title navi__title_link" href="./info.html#order">Как сделать заказ</a>
 			<a class="navi__title navi__title_link" href="./">Магазины</a>
 			<div class="navi__block">
 				<h2 class="navi__title">Информация</h2>
 				<div class="navi__links">
-					<a href="./">Доставка</a>
-					<a href="./">Оплата</a>
-					<a href="./">Политика конфиденциальности</a>
+					<a href="./info.html#delivery">Доставка</a>
+					<a href="./info.html#payment">Оплата</a>
+					<a href="./info.html#politics">Политика конфиденциальности</a>
 					<a href="./">Публичная оферта</a>
-					<a href="./">Возврат</a>
+					<a href="./info.html#return">Возврат</a>
 				</div>
 			</div>
 			<div class="navi__block">
@@ -81,9 +81,9 @@
 					<a href="./">Сотрудничество</a>
 					<a href="./">История бренда</a>
 					<a href="./">Производство</a>
-					<a href="./">Новости</a>
+					<a href="./article.html">Новости</a>
 					<a href="./">Вакансии</a>
-					<a href="./">Контакты</a>
+					<a href="./contacts.html">Контакты</a>
 				</div>
 			</div>
 			<a class="navi__phone" href="./">
