--- a/src/templates/sprite.symbol.html
+++ b/src/templates/sprite.symbol.html
@@ -117,6 +117,7 @@ They might well be outsourced to an external stylesheet of course.
  .svg-icon-heart-dims { width: 23px; height: 20px; }
  .svg-icon-label-dims { width: 17px; height: 9px; }
  .svg-icon-menu-dims { width: 25px; height: 16px; }
+ .svg-icon-play-dims { width: 37px; height: 44px; }
  .svg-icon-rule-dims { width: 19px; height: 11px; }
  .svg-icon-search-dims { width: 18px; height: 15px; }
  .svg-icon-soc-in-dims { width: 22px; height: 22px; }
@@ -159,6 +160,7 @@ for further details on how to create this embeddable sprite variant.
      <symbol viewBox="0 0 23 20" id="icon-heart" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="m21.393 10.784-8.86 8.678c-.791.774-1.433.588-2.048-.014l-9.028-8.842c-1.909-1.87-2.025-6.035.243-8.5 2.268-2.464 6.884-3.081 9.831-.089 2.992-2.93 7.219-2.446 9.65.03 2.094 2.135 2.615 6.383.212 8.737Zm-1.184-7.637c-.968-.949-3.453-2.572-6.402-1.04-.91.471-1.268 1.489-2.276 1.489-1.008 0-1.325-.932-2.336-1.49C8.183 1.55 4.92.742 2.617 3.504c-2.066 2.477-.613 5.588.51 6.687 1.121 1.099 8.374 8.172 8.374 8.172s6.394-6.292 8.647-8.5c2.254-2.207 1.03-5.767.061-6.715Z"/></symbol>
      <symbol viewBox="0 0 17 9" id="icon-label" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.727 4.932c-.335.32-3.852 3.754-4.023 3.917-.17.162-.204.151-.477.151H.341A.333.333 0 0 1 0 8.676V.326C0 .145.153 0 .34 0h11.887c.273 0 .307-.011.477.152.171.163 3.688 3.605 4.023 3.925.336.32.336.535 0 .855ZM12.182.824H.864v7.374h11.25l3.84-3.665L12.182.824Zm.795 2.43c.716 0 1.296.553 1.296 1.235 0 .683-.58 1.236-1.296 1.236-.715 0-1.295-.553-1.295-1.236 0-.682.58-1.236 1.295-1.236Zm-.011 1.669c.245 0 .443-.19.443-.423a.433.433 0 0 0-.443-.423.433.433 0 0 0-.443.423c0 .234.198.423.443.423Z"/></symbol>
      <symbol viewBox="0 0 25 16" id="icon-menu" xmlns="http://www.w3.org/2000/svg"><path d="M4 0h21v2H4V0ZM0 7h21v2H0V7ZM4 14h21v2H4v-2Z"/></symbol>
+     <symbol viewBox="0 0 37 44" id="icon-play" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="m.398.914 18.387 10.46L37.004 22l-18.219 10.46L.398 43.089V.914Z"/></symbol>
      <symbol viewBox="0 0 19 11" id="icon-rule" xmlns="http://www.w3.org/2000/svg"><path opacity=".5" d="M.936.822A.377.377 0 0 0 .56 1.2v9.058a.376.376 0 0 0 .376.377H18.52a.376.376 0 0 0 .377-.377V1.199a.376.376 0 0 0-.377-.377H.936ZM18.142 9.88H1.313V8.512h16.83V9.88Zm0-2.122H1.313V1.576h1.91v3.707a.376.376 0 1 0 .754 0V1.575H9.44v2.02a.376.376 0 1 0 .754 0v-2.02h5.462v3.708a.376.376 0 1 0 .753 0V1.575h1.733v6.183Z"/></symbol>
      <symbol viewBox="0 0 18 15" id="icon-search" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M17.545 15h-5.252a.463.463 0 0 1-.455-.47v-.06c0-.26.204-.47.455-.47h5.252c.251 0 .455.21.455.47v.06c0 .26-.204.47-.455.47Zm0-6.8h-6.802a.463.463 0 0 1-.455-.47v-.06c0-.26.204-.47.455-.47h6.802c.251 0 .455.21.455.47v.06c0 .26-.204.47-.455.47Zm0-7.2H1.83a.463.463 0 0 1-.455-.47V.47c0-.26.204-.47.455-.47h15.714c.251 0 .455.21.455.47v.06c0 .26-.204.47-.455.47ZM4.35 4.364c2.403 0 4.35 2.011 4.35 4.491 0 1.231-.48 2.346-1.256 3.157l2.061 2.128c.324.334.093.632.046.68-.046.048-.383.364-.736 0s-2.108-2.19-2.108-2.19a4.233 4.233 0 0 1-2.357.716C1.948 13.346 0 11.336 0 8.856c0-2.481 1.948-4.492 4.35-4.492Zm0 8.019c1.887 0 3.417-1.58 3.417-3.528S6.238 5.328 4.35 5.328c-1.888 0-3.417 1.58-3.417 3.527 0 1.948 1.53 3.528 3.417 3.528Z"/></symbol>
      <symbol viewBox="0 0 22 22" id="icon-soc-in" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.863 21.992H3.143a3.12 3.12 0 0 1-3.125-3.116V3.117A3.12 3.12 0 0 1 3.143 0h15.72a3.12 3.12 0 0 1 3.126 3.115v15.761a3.12 3.12 0 0 1-3.126 3.116Zm.5-16.248a3.12 3.12 0 0 0-3.126-3.115H5.77a3.12 3.12 0 0 0-3.126 3.115v10.504a3.12 3.12 0 0 0 3.126 3.115h10.467a3.12 3.12 0 0 0 3.126-3.115V5.744Zm-3.218 12.323H5.862a1.92 1.92 0 0 1-1.924-1.917V5.842a1.92 1.92 0 0 1 1.924-1.917h10.283a1.92 1.92 0 0 1 1.923 1.917V16.15a1.92 1.92 0 0 1-1.923 1.917Zm-5.11-11.644a4.537 4.537 0 0 0-4.544 4.53 4.537 4.537 0 0 0 4.545 4.529 4.537 4.537 0 0 0 4.544-4.53 4.537 4.537 0 0 0-4.544-4.53Zm4.52-1.21c-.703 0-1.274.568-1.274 1.27 0 .701.571 1.27 1.275 1.27s1.274-.569 1.274-1.27c0-.702-.57-1.27-1.274-1.27Zm-4.52 8.939a3.205 3.205 0 0 1-3.21-3.2c0-1.767 1.438-3.2 3.21-3.2a3.205 3.205 0 0 1 3.21 3.2c0 1.767-1.436 3.2-3.21 3.2Z"/></symbol>
@@ -289,6 +291,14 @@ embedded above. They may be styled via CSS.
                         </svg>
                     </div>
                     <h2>icon-menu, </h2>
+                </li>
+             <li title="icon-play">
+                    <div class="icon-box">
+                        <svg class="svg-icon-play-dims">
+                            <use xlink:href="#icon-play"></use>
+                        </svg>
+                    </div>
+                    <h2>icon-play, </h2>
                 </li>
              <li title="icon-rule">
                     <div class="icon-box">
@@ -477,6 +487,14 @@ SVG sprite. They may be styled via CSS.
                     </div>
                     <h2>icon-menu</h2>
                 </li>
+             <li title="icon-play">
+                    <div class="icon-box">
+                        <svg class="svg-icon-play-dims">
+                            <use xlink:href="_sprite.svg#icon-play"></use>
+                        </svg>
+                    </div>
+                    <h2>icon-play</h2>
+                </li>
              <li title="icon-rule">
                     <div class="icon-box">
                         <svg class="svg-icon-rule-dims">
@@ -557,7 +575,7 @@ SVG sprite. They may be styled via CSS.
 
         </section>
         <footer>
-            <p>Generated at Sun, 07 Apr 2024 14:36:27 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
+            <p>Generated at Thu, 11 Apr 2024 12:21:11 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
         </footer>
     </body>
 </html>
