--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -45,6 +45,7 @@
 	&__toggle {
 		@extend %reset-button;
 		flex-grow: 1;
+		height: 40px;
 		min-width: 45px;
 		max-width: 70px;
 		text-align: left;
@@ -222,8 +223,8 @@
 		position: fixed;
 		z-index: 12;
 		top: 0;
-		left: -353px; 
-		max-width: 353px;
+		left: -360px; 
+		max-width: 360px;
 		transition: left 0.2s linear;
 
 		&.opened {
