--- a/src/blocks/hero/hero.scss
+++ b/src/blocks/hero/hero.scss
@@ -139,10 +139,15 @@
 		left: 200px;
 		top: 50%;
 		transform: translateY(-50%);
+		transition: background-color 0.3s;
 		
 		@include media('<=md') {
 			left: 50%;
 			transform: translate(-50%, -50%);
+		}
+
+		&:hover {
+			background-color: rgba(255, 255, 255, 0.2);
 		}
 	}
 	
