--- a/src/blocks/filter/filter.scss
+++ b/src/blocks/filter/filter.scss
@@ -5,11 +5,16 @@
 	background-color: #f5f5f5;
 	padding: 40px;
 	display: none;
+	
+	@include media('<=sm') {
+		padding: 30px;
+	}
+	
+	@include media('<=xxs') {
+		padding: 20px;
+	}
 
 	&__items {
-		// column-count: 6;
-		// column-gap: 30px;
-
 		display: grid;
 		grid-template-columns: repeat(7, 1fr);
 		grid-gap: 20px;
